crates/oxc_css_parser/tests/recoverable/at-rule/keyframes.css.error.snap
---
source: crates/oxc_css_parser/tests/recoverable.rs
---
error: unknown keyframe selector
  ┌─ keyframes.css:2:3
  │
2 │   form {}
  │   ^^^^

error: unknown keyframe selector
  ┌─ keyframes.css:5:3
  │
5 │   bogus-range 50% {}
  │   ^^^^^^^^^^^
